fix header z-index

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -3,6 +3,7 @@
   width: 100%;
   background: transparent;
   padding: 1.5rem 0 2rem 0;
+  z-index: 1;
 
   &__content{
     display: flex;
